<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.symbol.assettrackerlite.AddModifyData"
    android:background="#2d2d2d">

    <!-- Header -->
    <LinearLayout style="@style/TitleBar"
        android:background="#2d2d2d">

        <ImageView
            style="@style/TitleIcon"
            android:layout_marginLeft="12dp"
            android:onClick="onBackButton"
            android:src="@drawable/arrow_left" />

        <TextView
            style="@style/Title"
            android:layout_marginRight="36dp"
            android:text="@string/addModifySKU_title"
            tools:visibility="visible" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#0077a0"
        android:padding="5dp"
        android:text="@string/addModifyInstructions"
        android:textColor="#f5f5f5" />
    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#f5f5f5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f5f5f5"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/barcode_string"
                android:textColor="#0077a0"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/scanData"
                android:layout_width="397dp"
                android:layout_height="48dp"
                android:gravity="top|center_vertical"
                android:inputType="numberDecimal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text=""
                android:hint="@string/addModifyInstructions"
                android:textColor="#000"
                android:textSize="16dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/value_string"
                    android:textColor="#0077a0"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/itemValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:inputType="numberDecimal"
                    android:digits="@string/decimalNumber"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text=""
                    android:textColor="#000"
                    android:textSize="16dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f5f5f5"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/description_string"
                android:textColor="#0077a0"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/itemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text=""
                android:textColor="#000"
                android:textSize="16dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addData"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:background="#0077a0"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:padding="10dp"
            android:gravity="center_vertical|center"
            android:text="@string/saveButton_string"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20dp"
            tools:layout_centerHorizontal="false" />

        <Button
            android:id="@+id/deleteData"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:padding="10dp"
            android:background="#0077a0"
            android:gravity="center_vertical|center"
            android:text="@string/deleteButton_string"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20dp" />

        <Button
            android:id="@+id/cancelData"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:padding="10dp"
            android:background="#0077a0"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/clearButton_string"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20dp" />

    </LinearLayout>
    <!--
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/printData"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom|start"
            android:background="#0077a0"
            android:editable="false"
            android:elevation="0dp"
            android:text="Print"
            android:textColor="#fff"
            android:textSize="20dp" />
    </RelativeLayout> -->


</LinearLayout>